pv#112676 - fix theme tag overlaping

--- a/css/surcharge.css
+++ b/css/surcharge.css
@@ -3097,6 +3097,9 @@ body.article-program .article-wrapper .article-title .at-content {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 1280px) {
